Bug 501004 - custom command for file paths does not correctly parse COLUMN for Node.js stack traces
Summary: custom command for file paths does not correctly parse COLUMN for Node.js sta...
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 23.08.5
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
: 502077 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-03-03 13:32 UTC by Jan
Modified: 2025-04-12 21:03 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jan 2025-03-03 13:32:32 UTC
SUMMARY
I'm on Ubuntu and cannot easily test the latest version of Konsole, but I did have a look at the code (github dot com/KDE/konsole/blob/dc93ba3fa5c262509058b817d72cd9d89266920d/src/filterHotSpots/FileFilterHotspot.cpp#L82) and it appears that this is still what I'd consider to be a bug, or perhaps a feature request?

Konsole will not parse file paths in this form:

    some/file.js:LINE:COLUMN

This is the format that Node.js spews stack traces, making web dev a bit tedious when using Konsole.

Instead, this verison of Konsole supports:

   some/file.cpp:LINE:COLUMN:           // note trailing colon

The code handling this is here: github.com/KDE/konsole/blob/dc93ba3fa5c262509058b817d72cd9d89266920d/src/filterHotSpots/FileFilterHotspot.cpp#L82

There's a thread with all repro steps and further detail here: 
https://discuss.kde.org/t/konsole-click-to-open-file-uses-default-rather-than-custom-text-editor-command/29848/2

Thank you.
Comment 1 Bug Janitor Service 2025-03-23 18:45:57 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/konsole/-/merge_requests/1086
Comment 2 Christoph Cullmann 2025-03-30 16:15:02 UTC
*** Bug 502077 has been marked as a duplicate of this bug. ***
Comment 3 Christoph Cullmann 2025-04-12 21:03:45 UTC
Git commit f8036be74564e544716506689cb96a4aa582263c by Christoph Cullmann.
Committed on 12/04/2025 at 20:59.
Pushed by cullmann into branch 'master'.

allow /path/to/file.cpp:123:123 paths

allow that no trailing : is behind the column

M  +2    -2    src/filterHotSpots/FileFilterHotspot.cpp

https://invent.kde.org/utilities/konsole/-/commit/f8036be74564e544716506689cb96a4aa582263c