allow /path/to/file.cpp:123:123 paths

allow that no trailing : is behind the column

BUG: 501004